Added filter to group and print as a list o HTML

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,40 @@
       crossorigin="anonymous"
     />
   </head>
+
   <body>
     <!-- Write your HTML code here, you can delete everything withing the body tags -->
     <div class="container-fluid text-center">
-      <p>Generate domains:</p>
-      <p id="domain"></p>
+
+      <div class="card">
+
+        <div class="card-header fs-1">
+          Generador Dominios
+        </div>
+
+        <div class="card-body">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <h5>Dominios .es :</h5>
+              <p id="Spanish"></p>
+            </li>
+            <li class="list-group-item">
+              <h5>Dominios .com :</h5>
+              <p id="Commerce"></p>
+            </li>
+            <li class="list-group-item">
+              <h5>Dominios .io :</h5>
+              <p id="IndianOcean"></p>
+            </li>
+            <li class="list-group-item">
+              <h5>Dominios .net :</h5>
+              <p id="NeT"></p>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+
     </div>
 
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
