Edit to match good practice

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <!-- Write your HTML code here, you can delete everything withing the body tags -->
+    
     <div class="container-fluid text-center">
 
       <div class="card">
@@ -27,22 +27,27 @@
 
         <div class="card-body">
           <ul class="list-group list-group-flush">
+
             <li class="list-group-item">
               <h5>Dominios .es :</h5>
               <p id="Spanish"></p>
             </li>
+
             <li class="list-group-item">
               <h5>Dominios .com :</h5>
               <p id="Commerce"></p>
             </li>
+
             <li class="list-group-item">
               <h5>Dominios .io :</h5>
               <p id="IndianOcean"></p>
             </li>
+
             <li class="list-group-item">
               <h5>Dominios .net :</h5>
               <p id="NeT"></p>
             </li>
+
           </ul>
         </div>
 
@@ -50,7 +55,7 @@
 
     </div>
 
-    <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
+    <!-- Do not delete this script tag, this is what connects the file HTML with the JS code -->
     <script type="module" src="/app.js"></script>
   </body>
 </html>
